--- a/Debug/makefile
+++ b/Debug/makefile
@@ -66,7 +66,7 @@ main-build: UJIMotorsport.elf secondary-outputs
 
 # Tool invocations
 UJIMotorsport.elf: $(OBJS) $(USER_OBJS) /home/anivia/STM32CubeIDE/workspace_1.8.0/UJIMotorsport/STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "UJIMotorsport.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/anivia/STM32CubeIDE/workspace_1.8.0/UJIMotorsport/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="UJIMotorsport.map" -Wl,--gc-sections -static -specs=rdimon.specs -lc -lrdimon --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "UJIMotorsport.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/anivia/STM32CubeIDE/workspace_1.8.0/UJIMotorsport/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="UJIMotorsport.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
